<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="422dp"
            android:layout_height="72dp"
            android:background="@drawable/background"
            app:srcCompat="@drawable/name" />

        <TextView
            android:id="@+id/service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spname" />

        <RatingBar
            android:id="@+id/ratingBar_detail"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/discrebtion"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:text="@string/discrebtion" />

        <ImageView
            android:id="@+id/image_view_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/time"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:text="time"

            android:textSize="24sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/cost"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/cost"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/direction"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/direction"
            android:textSize="24sp" />

        <Button
            android:id="@+id/request"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/request"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>